--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="FSh0BvvNBr1pnYeMYP1DKH0TNODIvSbqpCqJ5x7jGN4" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Infinexcapital.com is a scam broker that defrauds novice traders. Read our detailed review to learn why you should avoid this fraudulent platform.">
